# Sunbird-MCP

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md
diksha_mcp/: README.md  pyproject.toml
diksha_mcp/.aitk/: mcp.json
diksha_mcp/src/: __init__.py  server.py
docs/: index.md  proposal.md
sunbird_mcp/: .env.example  README.md  add_api.md  pyproject.toml
sunbird_mcp/.aitk/: mcp.json
sunbird_mcp/inspector/: package.json
sunbird_mcp/src/: config.py  server.py
sunbird_mcp/src/api/: __init__.py
sunbird_mcp/src/api/content/: __init__.py  api.py  validation.py
sunbird_mcp/src/api/sandbox_content/: __init__.py  api.py  validation.py
sunbird_mcp/src/api/sandbox_search/: __init__.py  api.py  validation.py
sunbird_mcp/src/api/search/: __init__.py  api.py  validation.py
sunbird_mcp/src/core/: __init__.py  base.py
sunbird_mcp/src/models/: __init__.py  content_models.py  models.py  sandbox_content_models.py  search_models.py
sunbird_mcp/src/utils/: __init__.py  content_validation.py  exceptions.py
