[project]
name = "trial_1"
version = "0.1.0"
description = "A MCP server for Resource Finder"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp==1.4.1"
]
// Optional dependencies
[project.optional-dependencies]
dev = ["debugpy==1.8.8"]
//File is default taken from the AI toolkit vscode extension